crates/oxc_react_compiler/tests/snapshots/error.modify-state.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.modify-state.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: This value cannot be modified", labels: [LabeledSpan { label: Some("value cannot be modified"), span: SourceSpan { offset: 92, length: 5 }, primary: false }], help: Some("Modifying a value returned from 'useState()', which should not be modified directly. Use the setter function to update instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
