crates/oxc_react_compiler/tests/snapshots/error.mutable-range-shared-inner-outer-function.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.mutable-range-shared-inner-outer-function.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: Cannot reassign variable after render completes", labels: [LabeledSpan { label: Some("Cannot reassign `a` after render completes"), span: Span { start: 190, end: 191 }, primary: false }], help: Some("Reassigning `a` after render has completed can cause inconsistent behavior on subsequent renders. Consider using state instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: Cannot modify local variables after render completes", labels: [LabeledSpan { label: Some("This function may (indirectly) reassign or modify `a` after render"), span: Span { start: 329, end: 330 }, primary: false }, LabeledSpan { label: Some("This modifies `a`"), span: Span { start: 190, end: 191 }, primary: false }], help: Some("This argument is a function which may reassign or mutate `a` after render, which can cause inconsistent behavior on subsequent renders. Consider using state instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
